tests/errors/surf_exc_12.ki
# repeating a List by a huge count is guarded (throws, not OOM)
discard [1] * 100000000000
